java/versioned_docs/version-1.11.0/inspector.mdx
---
id: inspector
title: "Inspector"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright Inspector is a GUI tool that helps authoring and debugging Playwright scripts.

<img width="712" alt="Playwright Inspector" src="https://user-images.githubusercontent.com/883973/108614092-8c478a80-73ac-11eb-9597-67dfce110e00.png"></img>

- [Open Playwright Inspector](#open-playwright-inspector)
- [Stepping through the Playwright script](#stepping-through-the-playwright-script)
- [Using Browser Developer Tools](#using-browser-developer-tools)
- [Debugging Selectors](#debugging-selectors)
- [Recording scripts](#recording-scripts)

## Open Playwright Inspector

There are several ways of opening Playwright Inspector:
- Set the `PWDEBUG` environment variable to run your scripts in debug mode. This configures Playwright for debugging and opens the inspector.

  ```sh
  # Linux/macOS
  $ PWDEBUG=1 PLAYWRIGHT_JAVA_SRC=<java src root> mvn test
  
  # Windows
  $ set PLAYWRIGHT_JAVA_SRC=<java src root>
  $ set PWDEBUG=1
  $ mvn test
  ```

  Additional useful defaults are configured when `PWDEBUG=1` is set:
  - Browsers launch in the headed mode
  - Default timeout is set to 0 (= no timeout)
- Call [Page.pause()](./api/class-page.mdx#pagepause) method from your script when running in headed browser.

  ```java
  // Pause on the following line.
  page.pause();
  ```

- Use `open` or `codegen` commands in the Playwright [CLI](./cli.mdx):

  ```sh
  $ mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="codegen wikipedia.org"
  ```

## Stepping through the Playwright script

When `PWDEBUG=1` is set, Playwright Inspector window will be opened and the script will be paused on the first Playwright statement:

<img width="557" alt="Paused on line" src="https://user-images.githubusercontent.com/883973/108614337-71761580-73ae-11eb-9f61-3d29c52c9520.png"></img>

Now we know what action is about to be performed and we can look into the details on that action. For example, when stopped on an input action such as `click`, the exact point Playwright is about to click is highlighted with the large red dot on the inspected page:

<img width="344" alt="Red dot on inspected page" src="https://user-images.githubusercontent.com/883973/108614363-b69a4780-73ae-11eb-8f5e-51f9c91ec9b4.png"></img>

By the time Playwright has paused on that click action, it has already performed actionability checks that can be found in the log:

<img width="712" alt="Action log" src="https://user-images.githubusercontent.com/883973/108614564-72a84200-73b0-11eb-9de2-828b28d78b36.png"></img>

If actionability can't be reached, it'll show action as pending:

<img width="712" alt="Pending action" src="https://user-images.githubusercontent.com/883973/108614840-e6e3e500-73b2-11eb-998f-0cf31b2aa9a2.png"></img>

You can step over each action using the "Step over" action or resume script without further pauses:

<center><img width="98" alt="Stepping toolbar" src="https://user-images.githubusercontent.com/883973/108614389-f9f4b600-73ae-11eb-8df2-8d9ce9da5d5c.png"></img></center>

## Using Browser Developer Tools

You can use browser developer tools in Chromium, Firefox and WebKit while running a Playwright script, with or without Playwright inspector. Developer tools help to:
* Inspect the DOM tree
* **See console logs** during execution (or learn how to [read logs via API](./verification.mdx#console-logs))
* Check **network activity** and other developer tools features

:::note
**For WebKit**: launching WebKit Inspector during the execution will   prevent the Playwright script from executing any further.
:::

## Debugging Selectors
- Click the Explore button to hover over elements in the screen and click them to automatically generate selectors for those elements.
- To verify where selector points, paste it into the inspector input field:

<img width="602" alt="Selectors toolbar" src="https://user-images.githubusercontent.com/883973/108614696-ad5eaa00-73b1-11eb-81f5-9eebe62543a2.png"></img>

## Recording scripts

At any moment, clicking Record action enables recorder (codegen) mode. Every action on the target page is turned into the generated script:

<img width="712" alt="Recorded script" src="https://user-images.githubusercontent.com/883973/108614897-85704600-73b3-11eb-8bcd-f2e129786c49.png"></img>

You can copy entire generated script or clear it using toolbar actions.

[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"